--- a/courses/btt1dg.html
+++ b/courses/btt1dg.html
@@ -104,7 +104,7 @@
 
 		<div class="center">
 			<div class="page-header" style="">
-				<h1 style="text-align:center;">BTT1DG <small> Markville Computer Science</small></h1>
+				<h1 style="text-align:center;">9 - BTT1DG <small> Gifted Business / Computers (Part 1)</small></h1>
 			</div>
 			<div class="bs-callout bs-callout-warning">
 			  	<h4>COURSE NOTE</h4>
