--- a/courses/ics201.html
+++ b/courses/ics201.html
@@ -104,7 +104,7 @@
 
 				<div class="center">
 			<div class="page-header" style="">
-				<h1 style="text-align:center;">10- ICS201 <small> Markville Computer Science</small></h1>
+				<h1 style="text-align:center;">10 - ICS201 <small> Introduction to Computer Science</small></h1>
 			</div>
 			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
 This course introduces students to computer programming. Students will plan and write simple computer programs by applying fundamental programming concepts, and learn to create clear and maintainable internal documentation. They will also learn to manage a computer by studying hardware configurations, software selection, operating system functions, networking, and safe computing practices. Students will also investigate the social impact of computer technologies, and develop an understanding of environmental and ethical issues related to the use of computers.
