--- a/courses/ics2dg.html
+++ b/courses/ics2dg.html
@@ -103,7 +103,7 @@
 
 		<div class="center">
 			<div class="page-header" style="">
-				<h1 style="text-align:center;">10 - ICS2DG <small> Markville Computer Science</small></h1>
+				<h1 style="text-align:center;">10 - ICS2DG <small> Gifted Business / Computers (Part 2)</small></h1>
 			</div>
 			<div class="bs-callout bs-callout-danger">
 			  	<h4>PREREQUISITE</h4>
