--- a/courses/ics3c1.html
+++ b/courses/ics3c1.html
@@ -101,7 +101,21 @@
 		      </div>
 		</div>
 
-
+		<div class="center">
+			<div class="page-header" style="">
+				<h1 style="text-align:center;">11 - ICS3C1 <small> Introduction to Computer Programming, College Preparation</small></h1>
+			</div>
+			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
+This course introduces students to computer programming concepts and practices. Students will write and test computer programs, using various problem-solving strategies. They will learn the fundamentals of program design and apply a software development life-cycle model to a software development project. Students will also learn about computer environments and systems, and explore environmental issues related to computers, safe computing practices, emerging technologies, and postsecondary opportunities in computer-related fields. 
+				</p>
+				<br><br><br><br>
+        <hr class="divider"></hr>    
+	    <div class="footer">
+	    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+	    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+	    </div>
 
 
 		<!-- END NAV -->
