--- a/courses/ics4c1.html
+++ b/courses/ics4c1.html
@@ -102,16 +102,25 @@
 		</div>
 
 
-		<div class="center fix">
-			<div class="page-header">
-				<h1>                                               Courses <small> Markville Computer Science</small></h1>
+		<div class="center">
+			<div class="page-header" style="">
+				<h1 style="text-align:center;">12 - ICS4C1 <small> Computer Science College Preparation</small></h1>
 			</div>
-			<div class="bs-callout bs-callout-default">
-			  	<h4>Default Callout</h4>
-			    This is a default callout.
+			<div class="bs-callout bs-callout-danger">
+			  	<h4>PREREQUISITE</h4>
+			    <a href="ics3c1.html">ICS3C1 - Introduction to Computer Programming </a>
 			</div>
-
-		</div>
+			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
+This course further develops students' computer programming skills. Students will learn object-oriented programming concepts, create object-oriented software solutions, and design graphical user interfaces. Student teams will plan and carry out a software development project using industry-standard programming tools and proper project management techniques. Students will also investigate ethical issues in computing and expand their understanding of environmental issues, emerging technologies, and computer-related careers. 
+				</p>
+				<br><br><br><br>
+        <hr class="divider"></hr>    
+	    <div class="footer">
+	    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+	    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+	    </div>
 
 		<!-- END NAV -->
 	</body>
