--- a/courses/ics4u1.html
+++ b/courses/ics4u1.html
@@ -102,16 +102,26 @@
 		</div>
 
 
-		<div class="center fix">
-			<div class="page-header" style="margin-left:100px;">
-				<h1>Courses <small> Markville Computer Science</small></h1>
-			</div>
-			<div class="bs-callout bs-callout-default">
-			  	<h4>Default Callout</h4>
-			    This is a default callout.
-			</div>
 
-		</div>
+		<div class="center">
+			<div class="page-header" style="">
+				<h1 style="text-align:center;">12 - ICS4U1 <small> Computer Science University Preparation</small></h1>
+			</div>
+			<div class="bs-callout bs-callout-danger">
+			  	<h4>PREREQUISITE</h4>
+			    <a href="ics3u1.html">ICS3U1 - Introduction to Computer Science, Grade 11, University Preparation </a>
+			</div>
+			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
+This course enables students to further develop knowledge and skills in computer science. Students will use modular design principles to create complex and fully documented programs, according to industry standards. Student teams will manage a large software development project, from planning through to project review. Students will also analyse algorithms for effectiveness. They will investigate ethical issues in computing and further explore environmental issues, emerging technologies, areas of research in computer science, and careers in the field.
+				</p>
+				<br><br><br><br>
+        <hr class="divider"></hr>    
+	    <div class="footer">
+	    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+	    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+	    </div>
 
 		<!-- END NAV -->
 	</body>
