--- a/courses/ics2dg.html
+++ b/courses/ics2dg.html
@@ -85,7 +85,7 @@
 							            <li class="active"><a href="ics2dg.html">ICS2DG</a></li>
 							            <li><a href="ics201.html">ICS201</a></li>
 							            <li><a href="ics3u1.html">ICS3U1</a></li>
-							            <li><a href="ics3u1.html">ICS3C1</a></li>
+							            <li><a href="ics3c1.html">ICS3C1</a></li>
 							            <li><a href="ics4u1.html">ICS4U1</a></li>
 							            <li><a href="ics4c1.html">ICS4C1</a></li>
 							            <li class="divider"></li>
