--- a/courses/ics2dg.html
+++ b/courses/ics2dg.html
@@ -56,13 +56,13 @@
 				                <span class="icon-bar"></span>
 				                <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand" href="#">Markville CompSci</a>
+			                <a class="navbar-brand" href="../index.html">Markville CompSci</a>
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
-				        	<li class=""><a href="index.html">Home</a></li>
-				        	<li><a href="resources.html">Resources</a></li>
-				        	<li><a href="opportunities.html">Opportunities</a></li>
+				        	<li class=""><a href="../index.html">Home</a></li>
+				        	<li><a href="../resources.html">Resources</a></li>
+				        	<li><a href="../opportunities.html">Opportunities</a></li>
 				        	<li class="dropdown">
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
