--- a/courses/ics3u1.html
+++ b/courses/ics3u1.html
@@ -57,23 +57,23 @@
 				                <span class="icon-bar"></span>
 				                <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand" href="#">Markville CompSci</a>
+			                <a class="navbar-brand" href="../index.html">Markville CompSci</a>
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
-				        	<li class=""><a href="index.html">Home</a></li>
-				        	<li><a href="resources.html">Resources</a></li>
-				        	<li><a href="opportunities.html">Opportunities</a></li>
+				        	<li class=""><a href="../index.html">Home</a></li>
+				        	<li><a href="../resources.html">Resources</a></li>
+				        	<li><a href="../opportunities.html">Opportunities</a></li>
 				        	<li class="dropdown">
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
-						          	<li><a href="#">Robotics</a></li>
+						          	<li><a href="../gallery.html#robotics">Robotics</a></li>
 						          	<li class="divider"></li>
-						            <li><a href="#">HTML</a></li>
-						            <li><a href="#">Turing</a></li>
-						            <li><a href="#">Java</a></li>
-						            <li><a href="#">Android</a></li>
+						            <li><a href="../gallery.html#html">HTML</a></li>
+						            <li><a href="../gallery.html#turing">Turing</a></li>
+						            <li><a href="../gallery.html#java">Java</a></li>
+						            <li><a href="../gallery.html#android">Android</a></li>
 						        </ul>
 					        </li>
 
