--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			             		<li class="dropdown">
 				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="courses/btt101.html">BTT1DG</a></li>
+							            <li><a href="courses/btt1dg.html">BTT1DG</a></li>
 							            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
 							            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
 							            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
