Info for resources

--- a/courses.html
+++ b/courses.html
@@ -159,14 +159,14 @@
 						</div>
 					</div>
 					<div class="col-md-4 colfix">
-						<h3>Need help?</h3>
+						<!--<h3>Need help?</h3>
 						<p>some text</p>
 						<br><br>
 						<h3>Still stuck?</h3>
 						<p>Contact info</p>
-						<br><br>
+						<br><br>-->
 						<h3>SHSM</h3>
-						<p>stuff</p>
+						<p>These courses all qualify for Markville's SHSM Info-Communications Technology program.</p>
 					</div>
 				</div>
 			</div>
