--- a/courses/ics3c1.html
+++ b/courses/ics3c1.html
@@ -84,9 +84,9 @@
 						          	<ul class="dropdown-menu" role="menu">
 							            <li><a href="btt1dg.html">BTT1DG</a></li>
 							            <li><a href="ics2dg.html">ICS2DG</a></li>
-							            <li class="active"><a href="ics201.html">ICS201</a></li>
+							            <li><a href="ics201.html">ICS201</a></li>
 							            <li><a href="ics3u1.html">ICS3U1</a></li>
-							            <li><a href="ics3c1.html">ICS3C1</a></li>
+							            <li class="active"><a href="ics3c1.html">ICS3C1</a></li>
 							            <li><a href="ics4u1.html">ICS4U1</a></li>
 							            <li><a href="ics4c1.html">ICS4C1</a></li>
 							            <li class="divider"></li>
