Update text and links for resources

--- a/resources.html
+++ b/resources.html
@@ -108,16 +108,23 @@
 
 		<!-- END NAV -->
 
-		<div class="center content fix">
-			<div class="container-fluid">
+		<div class="center fix">
+			<div class="container" style="padding-right: 100px;">
 				<div class="page-header">
-					<h1 style="text-align:middle;">Resources <small> Turing</small></h1>
+					<h1 style="text-align:center;">Resources <small> Turing</small></h1>
 				</div>
-				<div class="container">
+				<div style="text-align:left;">		
 				<p>Download the Turing environment and documentation for FREE from: <a href="http://compsci.ca/holtsoft">compsci.ca</a></p><br>
 				<p>These files are zipped files and must be extracted. You can download a FREE archive (zip) manager from <a href="http://sourceforge.net/projects/sevenzip/">Sourceforge</a></p><br>
-				<p>You may also want to download the free books: <br> <a href="http://compsci.ca/holtsoft/IPT.pdf">Introduction to Programming in Turing First Edition, Second Printing</a> - An introduction to the turing programming langue by J. N. P. Hume. ISBN: 0-921598-42-4 </p><br>
+				<p>You may also want to download the free books: <br><br> <a href="http://compsci.ca/holtsoft/IPT.pdf">Introduction to Programming in Turing First Edition, Second Printing</a> - An introduction to the turing programming langue by J. N. P. Hume. ISBN: 0-921598-42-4 </p>
 				<p><a href="http://compsci.ca/holtsoft/OOTRef.pdf">Object Oriented Turing Reference Manual Seventh Edition Version 1.0 </a>Reference manual for the Turing programming langue by R.C. Holt and Tom West. ISBN 0-921598-35-1</p>
+				</div>
+				<br><br>
+				<div class="page-header">
+					<h1 style="text-align:center;">Resources <small> Concept Lessons</small></h1>
+				</div>
+				<div style="text-align:left;">
+				<p>Sequential and Binary Searches <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/BinSearch1.pdf"> [1] </a> <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/binSearch2.pdf">[2]</a>
 				</div>
 			</div>
 
