Nav, link, info

--- a/resources.html
+++ b/resources.html
@@ -113,38 +113,73 @@
 				<div class="page-header">
 					<h1 style="text-align:center;">Resources <small> Turing</small></h1>
 				</div>
-				<div class="resources">		
-				<p>Download the Turing environment and documentation for FREE from: <a href="http://compsci.ca/holtsoft">compsci.ca</a></p><br>
-				<p>These files are zipped files and must be extracted. You can download a FREE archive (zip) manager from <a href="http://sourceforge.net/projects/sevenzip/">Sourceforge</a></p><br>
-				<p>You may also want to download the free books: <br><br> <a href="http://compsci.ca/holtsoft/IPT.pdf">Introduction to Programming in Turing First Edition, Second Printing</a> - An introduction to the turing programming langue by J. N. P. Hume. ISBN: 0-921598-42-4 </p>
-				<p><a href="http://compsci.ca/holtsoft/OOTRef.pdf">Object Oriented Turing Reference Manual Seventh Edition Version 1.0 </a>Reference manual for the Turing programming langue by R.C. Holt and Tom West. ISBN 0-921598-35-1</p>
-				</div>
-				<br><br>
-				<div class="page-header">
-					<h1 style="text-align:center;">Resources <small> Concept Lessons</small></h1>
-				</div>
-				<div class="resources">
-					<p>Sequential and Binary Searches <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/BinSearch1.pdf"> [1] </a> <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/binSearch2.pdf">[2]</a><br>
-					<p>Get your <a href="http://compsci.ca/holtsoft/OOTRef.pdf">Standard Sorting Presentation Document here.</a> Try to keep submissions to two or three pages. Format web references/links in your Resources/Links/Sources section in accordance to MLA citation format and then format the entire reference to hyperlink.</p><br>
-					<p>Memory Mapping with Instruction Pointer & Stack Tracking</p><a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack01.pdf">[1]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack02.pdf">[2]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack03a.pdf">[3A]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack03b.pdf">[3B]</a><br><br>
-					<p>Binary Tree Sort Definition/Concept</p>
-					<div style="padding-left:50px;">
-						- <a href="http://www.webopedia.com/TERM/T/tree_structure.html">[Tree Structure]</a><br>
-						- <a href="http://www.webopedia.com/TERM/T/tree_structure.html">[Nodes/Leaves/Braches/Roots]</a><br>
-						- Binary Tree <a href="http://www.webopedia.com/TERM/B/binary_tree.html">[1] <a href="http://en.wikipedia.org/wiki/Binary_tree">[2]</a> </a><br>
-						- <a href="http://en.wikipedia.org/wiki/Binary_search_tree">[Binary Search Tree]</a><br>
-						- <a href="http://www.cs.jhu.edu/%7Egoodrich/dsa/trees/btree.html">[Animation]</a><br>
-						- <a href="http://cis.stvincent.edu/html/tutorials/swd/avltrees/avltrees.html">[AVL Trees - Balancing Trees]</a><br>
-					</div><br>
-					<p>Right Click and select "Save Target As" or "Save Link As" to download the 5 Lessons on Pointers <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/4Pointer/Pointers%20Lesson.exe">(Flash.exe)</a> </p>
-				</div><br><br>
-				<div class="page-header">
-					<h1 style="text-align:center;">Resources <small> Java</small></h1>
+				<div class="row">
+					<div class="col-md-2">
+					<ul class="nav nav-pills nav-stacked">
+						  <li role="presentation" class="active"><a href="#">Turing</a></li>
+						  <li role="presentation"><a href="#">Concept Lessons</a></li>
+						  <li role="presentation"><a href="#">Java</a></li>
+					</ul>
+					</div>
+					<div class="col-md-10">
+						<div class="resources">		
+						<p>Download the Turing environment and documentation for FREE from: <a href="http://compsci.ca/holtsoft">compsci.ca</a></p><br>
+						<p>These files are zipped files and must be extracted. You can download a FREE archive (zip) manager from <a href="http://sourceforge.net/projects/sevenzip/">Sourceforge</a></p><br>
+						<p>You may also want to download the free books: <br><br> <a href="http://compsci.ca/holtsoft/IPT.pdf">Introduction to Programming in Turing First Edition, Second Printing</a> - An introduction to the turing programming langue by J. N. P. Hume. ISBN: 0-921598-42-4 </p>
+						<p><a href="http://compsci.ca/holtsoft/OOTRef.pdf">Object Oriented Turing Reference Manual Seventh Edition Version 1.0 </a>Reference manual for the Turing programming langue by R.C. Holt and Tom West. ISBN 0-921598-35-1</p>
+						</div>
+						<br><br>
+					</div>
+					<div class="page-header">
+						<h1 style="text-align:center;">Resources <small> Concept Lessons</small></h1>
+					</div>
+					<div class="resources">
+						<p>Sequential and Binary Searches <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/BinSearch1.pdf"> [1] </a> <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/1BinSearch/binSearch2.pdf">[2]</a></p><br>
+						<p>Get your <a href="http://compsci.ca/holtsoft/OOTRef.pdf">Standard Sorting Presentation Document here.</a> Try to keep submissions to two or three pages. Format web references/links in your Resources/Links/Sources section in accordance to MLA citation format and then format the entire reference to hyperlink.</p><br>
+						<p>Memory Mapping with Instruction Pointer & Stack Tracking</p><a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack01.pdf">[1]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack02.pdf">[2]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack03a.pdf">[3A]</a>&nbsp;<a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/3TheStack/Stack03b.pdf">[3B]</a><br><br>
+						<p>Binary Tree Sort Definition/Concept</p>
+						<div style="padding-left:50px;">
+							- <a href="http://www.webopedia.com/TERM/T/tree_structure.html">[Tree Structure]</a><br>
+							- <a href="http://www.webopedia.com/TERM/T/tree_structure.html">[Nodes/Leaves/Braches/Roots]</a><br>
+			
+							- Binary Tree <a href="http://www.webopedia.com/TERM/B/binary_tree.html">[1] <a href="http://en.wikipedia.org/wiki/Binary_tree">[2]</a> </a><br>
+							- <a href="http://en.wikipedia.org/wiki/Binary_search_tree">[Binary Search Tree]</a><br>
+							- <a href="http://www.cs.jhu.edu/%7Egoodrich/dsa/trees/btree.html">[Animation]</a><br>
+							- <a href="http://cis.stvincent.edu/html/tutorials/swd/avltrees/avltrees.html">[AVL Trees - Balancing Trees]</a><br>
+						</div><br>
+						<p>Right Click and select "Save Target As" or "Save Link As" to download the 5 Lessons on Pointers <a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/lessons/4Pointer/Pointers%20Lesson.exe">(Flash.exe)</a> </p>
+					</div><br><br>
+					<div class="page-header">
+						<h1 style="text-align:center;">Resources <small> Java</small></h1>
+					</div>
 				</div>
 				<div class="resources">
 					<a href="http://java.sun.com/docs/books/tutorial/java/index.html">This site</a> contains: Object-Oriented Programming Concepts<br><br>
 					<p>If you've never used an object-oriented programming language before, you'll need to learn a few basic concepts before you can begin writing any code. This lesson will introduce you to objects, classes, inheritance, interfaces, and packages. Each discussion focuses on how these concepts relate to the real world, while simultaneously providing an introduction to the syntax of the Java programming language</p><br>
-					<a href="http://www.cosc.canterbury.ac.nz/mukundan/dsal/appldsal.html">This site</a> contains: Data Structures and Algorithms (Animations)<br>
+					<a href="http://www.cosc.canterbury.ac.nz/mukundan/dsal/appldsal.html">This site</a> contains: Data Structures and Algorithms (Animations)<br><br>
+					<div style="padding-left:50px;">
+						- Java applets that show the operations for primitive data structures such as Stacks, Queues, and Binary Trees.<br>
+						- Animations for sorting and searching algorithms, the Tower of Hanoii puzzle, and graph traversal functions are also included.<br>
+					</div><br>
+					<a href="http://java.sun.com/j2se/1.4.2/docs/api/">This site</a> contains the Java API Reference Manual.<br><br>
+					<a href="http://www.dgp.toronto.edu/~mjmcguff/learn/java/">This site</a> contains Java Applet Tutorials and is meant to be a quick-and-dirty introduction to writing Java applets. A set of example applets are given to be used as exercises. Feel free to download the source code herein, try it out on your own machine, and modify it. <br><br>
+					<a href="http://www.cafeaulait.org/course/">This site</a> contains Java Lecture Notes from Elliotte Rusty Harold's, Introduction to Java Programming, taught most semesters at Polytechnic University in Brooklyn (formerly known as Brooklyn Poly). 
+					<div style="padding-left:50px;"><br>
+						- <a href="http://www.cafeaulait.org/course/week1/">Week 1: Basic Java</a><br>
+						- <a href="http://www.cafeaulait.org/course/week2/">Week 2: Procedural Java</a><br>
+						- <a href="http://www.cafeaulait.org/course/week3/">Week 3: Introduction to Objects</a><br>
+						- <a href="http://www.cafeaulait.org/course/week4/">Week 4: More Objects</a><br>
+						- <a href="http://www.cafeaulait.org/course/week5/">Week 5: Introducing Applets</a><br>
+						- <a href="http://www.cafeaulait.org/course/week6/index.html">Week 6: Components</a><br>
+						- <a href="http://www.cafeaulait.org/course/week7/index.html">Week 7: Events</a><br>
+						- <a href="http://www.cafeaulait.org/course/week8/index.html">Week 8: LayoutManagers, Windows, and Dialogs</a><br>
+						- <a href="http://www.cafeaulait.org/course/week9/index.html">Week 9: Images and Menus</a><br>
+						- <a href="http://www.cafeaulait.org/course/week10/index.html">Week 10: I/O and Streams</a><br>
+						- <a href="http://www.cafeaulait.org/course/week11/index.html">Week 11: Threads</a><br>
+						- <a href="http://www.cafeaulait.org/course/week12/index.html">Week 12: Network Programming</a><br>
+						- <a href="http://www.cafeaulait.org/course/week13/index.html">Week 13: Cut and Paste, Printing, Future Directions</a><br><br>
+					</div>
+					<p>More Java tutorials can be found <a href="http://www.java2s.com/Tutorial/Java/CatalogJava.htm">here.</a></p>
 				</div>
 			</div>
 
