--- a/courses/btt1dg.html
+++ b/courses/btt1dg.html
@@ -46,7 +46,7 @@
 
 	<body>
 
-		<div class="navbar-wrapper">
+		<div class="navbar-wrapper ub">
 		    <div class="container">
 		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		            <div class="container">
