--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	</head>
 
-	<body class="os">
+	<body>
 		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
@@ -123,7 +123,7 @@
 			            </div>
 			        </div>
 		        </div>
-		      </div>
+		    </div>
 		</div>
 
 		<div class="center content">
