--- a/opportunities.html
+++ b/opportunities.html
@@ -45,64 +45,65 @@
 
 	<body>
 
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
-			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-			        	<span class="sr-only">Toggle navigation</span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				    </button>
-			        
-			        <a class="navbar-brand" href="index.html">Markville Computer Science</a>
-			    
-			    </div>
+		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
+			<h1>WHY ARE YOU USING NETSCAPE</h1>
+		</div>
+		<div class="navbar-wrapper ub">
+		    <div class="container">
+		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		            <div class="container">
+			            <div class="navbar-header">
+			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				                <span class="sr-only">Toggle navigation</span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+			                </button>
+			                <a class="navbar-brand" href="index.html">Markville CompSci</a>
+			            </div>
+			            <div class="navbar-collapse collapse">
+			                <ul class="nav navbar-nav">
+				        	<li><a href="index.html">Home</a></li>
+				        	<li><a href="resources.html">Resources</a></li>
+				        	<li class="active"><a href="opportunities.html">Opportunities</a></li>
+				        	<li class="dropdown">
+						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
-			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="navbar-collapse">
-			        <ul class="nav navbar-nav">
-			        	<li class="active"><a href="index.html">Home</a></li>
-			        	<li><a href="resources.html">Resources</a></li>
-			        	<li><a href="opportunities.html">Opportunities</a></li>
-			        	<li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
+					          	<ul class="dropdown-menu" role="menu">
+						          	<li role="presentation" class="dropdown-header">Engineering</li>
+						          	<li><a href="gallery.html">Robotics</a></li>
+						          	<li class="divider"></li>
+					          	    <li role="presentation" class="dropdown-header">Programming</li>
+						            <li><a href="gallery.html#html">HTML</a></li>
+						            <li><a href="gallery.html#turing">Turing</a></li>
+						            <li><a href="gallery.html#java">Java</a></li>
+						            <li><a href="gallery.html#android">Android</a></li>
+						        </ul>
+					        </li>
 
-				          	<ul class="dropdown-menu" role="menu">
-					            <li><a href="#">BTT1DG</a></li>
-					            <li><a href="#">ICS2DG</a></li>
-					            <li><a href="#">ICS2O1</a></li>
-					            <li><a href="#">ICS3U1</a></li>
-					            <li><a href="#">ICS3C1</a></li>
-					            <li><a href="#">ICS4U1</a></li>
-					            <li><a href="#">ICS4C1</a></li>
-					            <li class="divider"></li>
-					            <li><a href="courses.html">View all &raquo;</a></li>
-					        </ul>
-				        </li>
-				        <li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
+			                </ul>
+			                <ul class="nav navbar-nav navbar-right">
+			             		<li class="dropdown">
+				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							            <li><a href="courses/btt1dg.html">BTT1DG</a></li>
+							            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
+							            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
+							            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
+							            <li><a href="courses/ics3c1.html">ICS3C1</a></li>
+							            <li><a href="courses/ics4u1.html">ICS4U1</a></li>
+							            <li><a href="courses/ics4c1.html">ICS4C1</a></li>
+							            <li class="divider"></li>
+							            <li><a href="courses.html">View all &raquo;</a></li>
+							        </ul>
+				                </li>
 
-				          	<ul class="dropdown-menu" role="menu">
-					          	<li><a href="#">Robotics</a></li>
-					            <li><a href="#">HTML</a></li>
-					            <li><a href="#">Turing</a></li>
-					            <li><a href="#">Java</a></li>
-					            <li><a href="#">Android</a></li>
-					            <li class="divider"></li>
-					            <li><a href="gallery.html">View All &raquo;</a></li>
-					        </ul>
-				        </li>
-			        </ul>
-
-			      	<ul class="nav navbar-nav navbar-right">
-				        <li><a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/computers.htm">CompSci Original Site</a></li>
-				        <li><a href="compsci.html">Why Computer Science?</a></li>
-			      	</ul>
-			    </div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
+			                </ul>
+			            </div>
+			        </div>
+		        </div>
+		    </div>
+		</div>
 
 		<!-- END NAV -->
 
