--- a/resources.html
+++ b/resources.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="en-US">
-<meta charset="UTF-8">
 
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Resources | Department of Computer Science </title>
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +52,10 @@
 
 	<body>
 
-		<div class="navbar-wrapper">
+		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
+			<h1>WHY ARE YOU USING NETSCAPE</h1>
+		</div>
+		<div class="navbar-wrapper ub">
 		    <div class="container">
 		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		            <div class="container">
@@ -66,25 +70,27 @@
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
-				        	<li class=""><a href="index.html">Home</a></li>
-				        	<li><a href="resources.html">Resources</a></li>
+				        	<li><a href="index.html">Home</a></li>
+				        	<li class="active"><a href="resources.html">Resources</a></li>
 				        	<li><a href="opportunities.html">Opportunities</a></li>
 				        	<li class="dropdown">
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
-						          	<li><a href="gallery.html#">Robotics</a></li>
+						          	<li role="presentation" class="dropdown-header">Engineering</li>
+						          	<li><a href="gallery.html">Robotics</a></li>
 						          	<li class="divider"></li>
-						            <li><a href="#">HTML</a></li>
-						            <li><a href="#">Turing</a></li>
-						            <li><a href="#">Java</a></li>
-						            <li><a href="#">Android</a></li>
+					          	    <li role="presentation" class="dropdown-header">Programming</li>
+						            <li><a href="gallery.html#html">HTML</a></li>
+						            <li><a href="gallery.html#turing">Turing</a></li>
+						            <li><a href="gallery.html#java">Java</a></li>
+						            <li><a href="gallery.html#android">Android</a></li>
 						        </ul>
 					        </li>
 
 			                </ul>
 			                <ul class="nav navbar-nav navbar-right">
-			             		<li class="dropdown active">
+			             		<li class="dropdown">
 				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
 							            <li><a href="courses/btt1dg.html">BTT1DG</a></li>
@@ -103,7 +109,7 @@
 			            </div>
 			        </div>
 		        </div>
-		      </div>
+		    </div>
 		</div>
 
 		<!-- END NAV -->
