Fix boxes on resources page
Container wasn;t responding to larger screen sizes

--- a/resources.html
+++ b/resources.html
@@ -114,8 +114,8 @@
 
 		<!-- END NAV -->
 
-		<div class="center fix">
-			<div class="container" style="padding-right: 20%; padding-left:10%">
+		<div class="center content fix">
+			<div class="container-fluid" style="padding-left:10%; padding-right:10%;">
 				<div class="page-header">
 					<h1 style="text-align:center;">Resources <small> Turing</small></h1>
 				</div>
