--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 		  });
 		});
 		</script>
+		<script type="text/javascript">
+	
+			if ( $(window).width() < 1157) {
+			document.location = "indexm.html";
+			}
+
+		</script>
 		<script>
 			$(document).ready(
 			function() {
@@ -65,157 +72,77 @@
 
 	</head>
 
-	<body>
+	<body style="height:100%; position:fixed; left:0; top:0;">
 		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
-		<div class="navbar-wrapper ub">
-		    <div class="container">
-		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-		            <div class="container">
-			            <div class="navbar-header">
-			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				                <span class="sr-only">Toggle navigation</span>
-				                <span class="icon-bar"></span>
-				                <span class="icon-bar"></span>
-				                <span class="icon-bar"></span>
-			                </button>
-			                <a class="navbar-brand" href="index.html">Markville CompSci</a>
-			            </div>
-			            <div class="navbar-collapse collapse">
-			                <ul class="nav navbar-nav">
-				        	<li class="active"><a href="index.html">Home</a></li>
-				        	<li><a href="resources.html">Resources</a></li>
-				        	<li><a href="opportunities.html">Opportunities</a></li>
-				        	<li class="dropdown">
-						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
-					          	<ul class="dropdown-menu" role="menu">
-						          	<li role="presentation" class="dropdown-header">Engineering</li>
-						          	<li><a href="gallery.html">Robotics</a></li>
-						          	<li class="divider"></li>
-					          	    <li role="presentation" class="dropdown-header">Programming</li>
-						            <li><a href="gallery.html#html">HTML</a></li>
-						            <li><a href="gallery.html#turing">Turing</a></li>
-						            <li><a href="gallery.html#java">Java</a></li>
-						            <li><a href="gallery.html#android">Android</a></li>
-						        </ul>
-					        </li>
+		<div class="overflow" style="min-height:100%; border:none;">
 
-			                </ul>
-			                <ul class="nav navbar-nav navbar-right">
-			             		<li class="dropdown">
-				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
-						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="courses/btt1dg.html">BTT1DG</a></li>
-							            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
-							            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
-							            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
-							            <li><a href="courses/ics3c1.html">ICS3C1</a></li>
-							            <li><a href="courses/ics4u1.html">ICS4U1</a></li>
-							            <li><a href="courses/ics4c1.html">ICS4C1</a></li>
-							            <li class="divider"></li>
-							            <li><a href="courses.html">View all &raquo;</a></li>
-							        </ul>
-				                </li>
+			<div id="carousel" class="carousel slide" data-ride="carousel">
+			  <!-- Indicators -->
+			    <ol class="carousel-indicators">
+				    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+				    <li data-target="#carousel" data-slide-to="1"></li>
+				    <li data-target="#carousel" data-slide-to="2"></li>
+			    </ol>
 
-			                </ul>
-			            </div>
-			        </div>
-		        </div>
-		    </div>
+			  <!-- Wrapper for slides -->
+			    <div class="carousel-inner">
+			    	<div class="item">
+			        	<img src="http://i.imgur.com/PjW6IvX.jpg" alt="..." class="">
+			      		<div class="carousel-caption">
+			      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
+			     		</div>
+			    	</div>
+				    <div class="item active">
+				      	<img src="http://i.imgur.com/76CdsTx.jpg" alt="...">
+				      	<div class="carousel-caption">
+				      	....
+				    	</div>
+			    	</div>
+				    <div class="item">
+				      	<img src="http://i.imgur.com/g791wVJ.jpg" alt="...">
+				      	<div class="carousel-caption">
+				      	....
+				    	</div>
+			    	</div>
+
+				</div>
+
+			  <!-- Controls -->
+				<a class="left carousel-control ignore" href="#carousel" role="button" data-slide="prev">
+				    <span class="glyphicon glyphicon-chevron-left" style="margin-top:-50px;"></span>
+				</a>
+				<a class="right carousel-control ignore" href="#carousel" role="button" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right" style="margin-top:-50px;"></span>
+				</a>
+			</div>
 		</div>
-
-		<div class="center content">
-			<div class="container-fluid">
-
-				<div id="carousel" class="carousel slide" data-ride="carousel">
-				  <!-- Indicators -->
-				    <ol class="carousel-indicators">
-					    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-					    <li data-target="#carousel" data-slide-to="1"></li>
-					    <li data-target="#carousel" data-slide-to="2"></li>
-				    </ol>
-
-				  <!-- Wrapper for slides -->
-				    <div class="carousel-inner" >
-				    	<div class="item">
-				        	<img src="http://i.imgur.com/PjW6IvX.jpg" alt="..." class="">
-				      		<div class="carousel-caption">
-				      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
-				     		</div>
-				    	</div>
-					    <div class="item active">
-					      	<img src="http://i.imgur.com/76CdsTx.jpg" alt="...">
-					      	<div class="carousel-caption">
-					      	....
-					    	</div>
-				    	</div>
-					    <div class="item">
-					      	<img src="http://i.imgur.com/g791wVJ.jpg" alt="...">
-					      	<div class="carousel-caption">
-					      	....
-					    	</div>
-				    	</div>
-
+		<div class="container-fluid" style="margin-left:-15px; min-width:100%;">
+			<div class="navigation-bar">
+				<div class="row">
+					<div class="col-md-5" style="height:100px; color:white;">
+						<p class="qs" style="vertical-align: middle; margin:0 0 0 0; font-size:2em; padding-top:25px; padding-left:25px;">Markville Computer Science</p>
 					</div>
-
-				  <!-- Controls -->
-					<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-					    <span class="glyphicon glyphicon-chevron-left"></span>
-					</a>
-					<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-					    <span class="glyphicon glyphicon-chevron-right"></span>
-					</a>
+					<div class="col-md-1" style="padding-top:30px;">
+						<a href="#" class="qs main" style="font-size:1.5em;">Home</p></a>
+					</div>
+					<div class="col-md-2" style="padding-top:30px;">
+						<a href="#" class="qs main" style="font-size:1.5em;">Resources</p></a>
+					</div>
+					<div class="col-md-2" style="padding-top:30px;">
+						<a href="#" class="qs main" style="font-size:1.5em;">Opportunities</p></a>
+					</div>
+					<div class="col-md-1" style="padding-top:30px;">
+						<a href="#" class="qs main" style="font-size:1.5em;">Gallery</p></a>
+					</div>
+					<div class="col-md-1" style="padding-top:30px;">
+						<a href="#" class="qs main" style="font-size:1.5em;">Courses</p></a>
+					</div>
 				</div>
 			</div>
-
-			<div class="container-fluid">
-
-			</div>
-
-		    <div class="container-fluid content">
-
-		      <!-- Three columns of text below the carousel -->
-		        <div class="row">
-			        <div class="col-md-4">
-				        <span class="fa-stack fa-lg" style="font-size:5em;">
-				        	<i class="fa hover fa-circle-thin fa-stack-2x"></i>
-				            <i class="fa hover green fa-code fa-stack-1x"></i>
-			            </span>
-			            <h3>Hour of Code</h3>
-			            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-			            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-md-4">
-			        	<span class="fa-stack fa-lg" style="font-size:5em;">
-				        	<i class="fa hover fa-circle-thin fa-stack-2x"></i>
-				            <i class="fa hover red fa-play fa-stack-1x margin7"></i>
-			            </span>
-			            <h3>Why Computer Science?</h3>
-			            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-			            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-md-4">
-			           	<span class="fa-stack fa-lg" style="font-size:5em;">
-				        	<i class="fa hover fa-circle-thin fa-stack-2x"></i>
-				            <i class="fa hover blue fa-group" style="font-size:0.9em;"></i>
-			            </span>
-			           <h3>Gallery</h3>
-			            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-			            <p><a class="btn btn-info" href="gallery.html" role="button">View All &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-		        </div><!-- /.row -->
-
-		        <br><br><br><br>
-		        <hr class="divider"></hr>    
-			    <div class="footer">
-			    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
-			    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-					</script>
-			    </div>
-		    </div>
 		</div>
+
 	</body>
 </html>
