Make size of carousel variable

--- a/indexm.html
+++ b/indexm.html
@@ -145,7 +145,7 @@
 				    </ol>
 
 				  <!-- Wrapper for slides -->
-				    <div class="carousel-inner" style="height:250px;">
+				    <div class="carousel-inner" style="">
 				    	<div class="item">
 				        	<img src="http://i.imgur.com/PjW6IvX.jpg" alt="..." class="">
 				      		<div class="carousel-caption">
