--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
 						<p class="qs" style="vertical-align: middle; margin:0 0 0 0; font-size:2em; padding-top:25px; padding-left:25px;">Markville Computer Science</p>
 					</div>
 					<div class="col-md-1" style="padding-top:30px;">
-						<a href="#" class="qs main" style="font-size:1.5em;">Home</p></a>
+						<a href="index.html" class="qs main" style="font-size:1.5em;">Home</p></a>
 					</div>
 					<div class="col-md-2" style="padding-top:30px;">
-						<a href="#" class="qs main" style="font-size:1.5em;">Resources</p></a>
+						<a href="resources.html" class="qs main" style="font-size:1.5em;">Resources</p></a>
 					</div>
-					<div class="col-md-2" style="padding-top:30px;">
-						<a href="#" class="qs main" style="font-size:1.5em;">Opportunities</p></a>
+					<div class="col-md-2" style="padding-top:30px; margin-left:-75px;">
+						<a href="opportunities.html" class="qs main" style="font-size:1.5em;">Opportunities</p></a>
 					</div>
-					<div class="col-md-1" style="padding-top:30px;">
-						<a href="#" class="qs main" style="font-size:1.5em;">Gallery</p></a>
+					<div class="col-md-1" style="padding-top:30px; margin-left:-20px;">
+						<a href="gallery.html" class="qs main" style="font-size:1.5em;">Gallery</p></a>
 					</div>
-					<div class="col-md-1" style="padding-top:30px;">
-						<a href="#" class="qs main" style="font-size:1.5em;">Courses</p></a>
+					<div class="col-md-1" style="padding-top:30px; padding-left:25px;">
+						<a href="courses.html" class="qs main" style="font-size:1.5em;">Courses</p></a>
 					</div>
 				</div>
 			</div>
